Bug 515236 - When entering a folder from a search result, going back in the search requires clicking the back button more than it should
Summary: When entering a folder from a search result, going back in the search require...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.12.1
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2026-01-29 00:54 UTC by Fernando Marcelino Muniz
Modified: 2026-03-17 09:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Issue in Dolphin 25.12.1 (2.54 MB, video/x-matroska)
2026-01-29 01:49 UTC, Fernando Marcelino Muniz
Details
Issue in Dolphin 25.12.1 (1.15 MB, video/x-matroska)
2026-01-29 01:53 UTC, Fernando Marcelino Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2026-01-29 00:54:11 UTC
STEPS TO REPRODUCE
1. Search for a folder.
2. Enter the folder.
3. Press the back button.

OBSERVED RESULT
You need to press the back button a bunch to go back to the search.

EXPECTED RESULT
You should have to backtrack to the search by clicking the button only once if you just entered there and pressed the back button to go back.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux 
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.18.7-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: Intel® Iris® Xe Graphics
Graphics Processor 2: NVIDIA GeForce GTX 1650
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6
Comment 1 Fernando Marcelino Muniz 2026-01-29 01:49:17 UTC
Created attachment 189011 [details]
Issue in Dolphin 25.12.1
Comment 2 Fernando Marcelino Muniz 2026-01-29 01:53:03 UTC
Created attachment 189012 [details]
Issue in Dolphin 25.12.1
Comment 3 Bug Janitor Service 2026-03-16 08:50:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1217
Comment 4 Méven 2026-03-17 09:55:56 UTC
Git commit 35b309aa3efac59b12e0c6bfc127516649f8cfa2 by Méven Car, on behalf of Pan Zhang.
Committed on 17/03/2026 at 09:40.
Pushed by meven into branch 'master'.

dolphinviewcontainer: Avoid adding an extra history entry when leaving search results

When navigating away from a search result, hiding the search bar unintentionally emitted urlChangeRequested(searchPath). This inserted an extra navigation step into the history, causing the “Back” button to require multiple presses to return to the search results.

Introduce Search::Bar::HideBehavior to allow callers to hide the search bar without triggering a URL change, and use it when the bar is automatically hidden due to non-search navigation.

M  +1    -1    src/dolphinviewcontainer.cpp
M  +4    -2    src/search/bar.cpp
M  +14   -1    src/search/bar.h

https://invent.kde.org/system/dolphin/-/commit/35b309aa3efac59b12e0c6bfc127516649f8cfa2